--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "eslint-plugin-html": "^4.0.5",
+    "gsap": "^2.0.1",
     "node-growl": "^0.1.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
