--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "eslint-plugin-html": "^4.0.5",
     "gsap": "^2.0.1",
     "node-growl": "^0.1.1",
