--- a/package.json
+++ b/package.json
@@ -72,11 +72,14 @@
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
+    "vue-svg-icon": "^1.2.9",
+    "vue-svgicon": "^3.2.6",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "xml-loader": "^1.2.1"
   },
   "engines": {
     "node": ">= 6.0.0",
